...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_eventName" />

            <TextView
                android:id="@+id/viewEventName"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_eventDate" />

            <TextView
                android:id="@+id/viewEventDate"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

...
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewStartTime"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

...
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
...
                    android:id="@+id/imageView_category"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/viewEventCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:background="#e9eae5" />
            </LinearLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_memo" />

            <TextView
                android:id="@+id/viewMemo"
                android:textSize="25sp"
                android:background="#e9eae5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_address" />

            <TextView
                android:id="@+id/viewAddress"
                android:textSize="25sp"
                android:background="#e9eae5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
...
