...

    <string name="column_required_eventName">イベント名(必須)</string>
    <string name="column_required_eventDate">日付(必須)</string>
    <string name="column_required_startTime">開始時間(必須)</string>
    <string name="column_required_endTime">終了時間(必須)</string>

    <string name="category_move">移動</string>
    <string name="category_sightseeing">観光</string>
    <string name="category_eat">食事</string>
    <string name="category_stay">宿泊</string>
    <string name="category_other">その他</string>

    <string name="menu_list_options_plan_list">プラン一覧のオプションメニュー</string>
...
    <!-- 各ページのタイトル -->
    <string name="title_planList">プラン一覧</string>
    <string name="title_planAdd">プラン作成</string>
    <string name="title_planEdit">プランの編集画面</string>
    <string name="title_eventList">イベント一覧</string>
    <string name="title_eventAdd">イベントの新規作成</string>
    <string name="title_eventEdit">イベントの編集画面</string>
    <string name="title_eventReference">イベントの参照画面</string>

    <!-- エラーメッセージ -->
    <string name="msg_error_0001">必須項目を入力してください</string>
    <string name="msg_error_0002">日付形式で入力してください</string>
    <string name="msg_error_0003">出発日以降の日付を入力してください</string>
    <string name="msg_error_0004">最終日以前の日付を入力してください</string>

    <!-- ワーニングメッセージ -->
    <string name="msg_warning_0001">プランを削除します。よろしいですか？</string>
...
