...
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_required_planName" />

        </android.support.design.widget.TextInputLayout>

...
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editStartDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_startDay"
                    android:inputType="time" />

...
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEndDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_endDay"
                    android:inputType="time" />

...
                        android:layout_height="60sp"
                        android:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        android:text="@string/column_person"/>

                    <Spinner
                        android:id="@+id/PersonNumber"
                        android:singleLine="true"
                        android:textSize="40sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:spinnerMode="dialog"/>
...
