package rd.slcs.co.jp.showtabi;

import android.app.Activity;
import android.os.IBinder;
import android.support.test.espresso.Espresso;
import android.support.test.espresso.NoMatchingViewException;
import android.support.test.espresso.PerformException;
import android.support.test.espresso.Root;
import android.support.test.espresso.UiController;
import android.support.test.espresso.ViewAction;
import android.support.test.espresso.ViewAssertion;
import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.espresso.util.HumanReadables;
import android.support.test.rule.ActivityTestRule;
import android.support.v4.widget.NestedScrollView;
import android.view.View;
import android.view.ViewParent;
import android.view.WindowManager;
import android.widget.EditText;
import android.widget.FrameLayout;
import android.widget.TextView;

import com.google.firebase.database.DatabaseReference;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.Matchers;
import org.hamcrest.TypeSafeMatcher;
import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;

import rd.slcs.co.jp.showtabi.activity.MainActivity;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.longClick;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static android.support.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static java.util.EnumSet.allOf;
import static org.hamcrest.CoreMatchers.anything;
import static org.hamcrest.CoreMatchers.instanceOf;
import static org.hamcrest.CoreMatchers.is;

public class POC_10_Test {
    private DatabaseReference mDatabase;
    private Activity mActivity;

    // テスト開始前に実行する処理
    @Rule
    public ActivityTestRule<MainActivity> mActivityRule = new ActivityTestRule(MainActivity.class, false, false);

    @Before
    public void setUp() {
        POC_Common.tearDownDB(mDatabase);
        mActivity = mActivityRule.launchActivity(null);
    }

    ;

    @After
    public void tearDown() {
        POC_Common.tearDownDB(mDatabase);
    }

    @Test
    public void case1() {
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // ＋ボタンを押下
        onView(withId(R.id.menuListOption_Plan_List))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        // 登録するプラン情報を入力
        onView(withId(R.id.editPlanName))
                .perform(replaceText("テストプラン"));
        onView(withId(R.id.editStartDay))
                .perform(replaceText("20500101"));
        onView(withId(R.id.editEndDay))
                .perform(replaceText("20510101"));

        onView(withId(R.id.PersonNumber)).perform(click());
        onData(anything()).atPosition(6).perform(click());

        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        // 保存ボタンを押下
        onView(withId(R.id.menuListOption_Plan_Add))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // プラン一覧画面でプランをクリックする
        onView(withId(R.id.CardRecyclerView4Plan)).perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // イベント一覧画面の登録ボタンを押下する
        onView(withId(R.id.menuListOption_Event_List))
                .perform(click());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // ---------------------------------------------------------------
        // 適当にイベント登録
        // ---------------------------------------------------------------
        String eventDate = "20500102"; // 日付引継ぎ確認用

        onView(withId(R.id.editEventName))
                .perform(replaceText("テストイベント"));
        onView(withId(R.id.editEventDate))
                .perform(replaceText(eventDate));
        onView(withId(R.id.editStartTime))
                .perform(replaceText("1700"));
        onView(withId(R.id.editEndTime))
                .perform(replaceText("1900"));
        onView(withId(R.id.radio_sightseeing))
                .perform(click());
        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        onView(withId(R.id.editAddress))
                .perform(replaceText("東京都新宿区"));

        // 保存ボタンを押下する
        onView(withId(R.id.menuListOption_Event_Add))
                .perform(click());


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // イベント一覧画面でイベント長押ししたらイベント編集画面が開くことを確認
        onView(withId(R.id.CardRecyclerView4Event)).perform(RecyclerViewActions.actionOnItemAtPosition(0, longClick()));

        try {
            Thread.sleep(5000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // イベント編集画面への遷移を確認
        onView(withText("イベントの編集画面")).check(matches(ViewMatchers.isDisplayed()));

        //        ※イベント一覧画面の日付を初期設定を確認
        onView(withId(R.id.editEventDate)).check(matches(isEditTextValueEqualTo(eventDate)));

        // ---------------------------------------------------------------
        // ボタン表示の確認
        // ---------------------------------------------------------------
        onView(withContentDescription(R.string.abc_action_bar_up_description))
                .check(matches(isDisplayed()));
        onView(withId(R.id.menuListOption_Event_Edit_Save))
                .check(matches(isDisplayed()));
        onView(withId(R.id.menuListOption_Event_Edit_Del))
                .check(matches(isDisplayed()));


        // -----------------------------------------------------------------------------------
        // バリデーションチェック
        // -----------------------------------------------------------------------------------

        // イベント名のみを未入力で登録ボタンを押下する
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText(""));
        onView(withId(R.id.radio_stay))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText("20500103"));

        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText("1900"));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText("2100"));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText("メモ１"));
        onView(withId(R.id.editAddress))
                .perform(replaceText("東京都新宿区１"));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        onView(withId(R.id.menuListOption_Event_Edit_Save)).perform(click());

        onView(withText(R.string.msg_error_0001)).inRoot(new ToastMatcher())
                .check(matches(withText("必須項目を入力してください")));


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // 日付のみを未入力で登録ボタンを押下する
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText("テストイベント名２"));
        onView(withId(R.id.radio_move))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText(""));
        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText("1900"));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText("2100"));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText("メモ２"));
        onView(withId(R.id.editAddress))
                .perform(nestedScrollTo(), replaceText("東京都新宿区２"));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.menuListOption_Event_Edit_Save)).perform(click());

        onView(withText(R.string.msg_error_0001)).inRoot(new ToastMatcher())
                .check(matches(withText("必須項目を入力してください")));


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // 開始時間のみを未入力で登録ボタンを押下する
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText("テストイベント名３"));
        onView(withId(R.id.radio_sightseeing))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText("20500103"));
        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText(""));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText("2100"));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText("メモ３"));
        onView(withId(R.id.editAddress))
                .perform(nestedScrollTo(), replaceText("東京都新宿区３"));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.menuListOption_Event_Edit_Save)).perform(click());

        onView(withText(R.string.msg_error_0001)).inRoot(new ToastMatcher())
                .check(matches(withText("必須項目を入力してください")));


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // 終了時間のみを未入力で登録ボタンを押下する
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText("テストイベント名4"));
        onView(withId(R.id.radio_sightseeing))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText("20990331"));
        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText("1700"));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText(""));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText("メモ３"));
        onView(withId(R.id.editAddress))
                .perform(nestedScrollTo(), replaceText("東京都新宿区３"));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.menuListOption_Event_Edit_Save)).perform(click());

        onView(withText(R.string.msg_error_0001)).inRoot(new ToastMatcher())
                .check(matches(withText("必須項目を入力してください")));


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // -----------------------------------------------------------------------------------
        // 表示されている項目は全て登録した内容が表示されていること
        // -----------------------------------------------------------------------------------

        String testEventName = "テスト編集イベント名４";
        String testEventDate = "20500103";
        String testEventStartTime = "0400";
        String testEventEndTime = "2300";
        String testEventMemo = "メモ４";
        String testEventAddress = "東京都新宿区４";
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText(testEventName));
        onView(withId(R.id.radio_move))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText(testEventDate));
        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText(testEventStartTime));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText(testEventEndTime));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText(testEventMemo));
        onView(withId(R.id.editAddress))
                .perform(nestedScrollTo(), replaceText(testEventAddress));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        onView(withId(R.id.menuListOption_Event_Edit_Save)).perform(click());


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // イベント一覧画面に遷移することを確認
        onView(withText("テストプラン")).check(matches(ViewMatchers.isDisplayed()));

        // イベント一覧画面でイベントをクリックする
        onView(withId(R.id.CardRecyclerView4Event))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // ---------------------------------------------------------------
        // イベント参照画面が表示されていることを確認する
        // ---------------------------------------------------------------
        onView(withText("イベントの参照画面")).check(matches(ViewMatchers.isDisplayed()));

        // ---------------------------------------------------------------
        // イベント参照画面に項目が正しく表示されることを確認する
        // ---------------------------------------------------------------
        onView(withId(R.id.viewEventName))
                .check(matches(withText(testEventName)));
        onView(withId(R.id.viewEventDate))
                .check(matches(withText("2050/1/3(月)")));
        onView(withId(R.id.viewStartTime))
                .check(matches(withText("4:00")));
        onView(withId(R.id.viewEndTime))
                .check(matches(withText("23:00")));
        onView(withId(R.id.viewEventCategory))
                .check(matches(withText("移動")));
        onView(withId(R.id.viewMemo))
                .check(matches(withText(testEventMemo)));
        onView(withId(R.id.viewAddress))
                .check(matches(withText(testEventAddress)));


    }

    @Test
    public void case2() {
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // ＋ボタンを押下
        onView(withId(R.id.menuListOption_Plan_List))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        // 登録するプラン情報を入力
        onView(withId(R.id.editPlanName))
                .perform(replaceText("テストプラン"));
        onView(withId(R.id.editStartDay))
                .perform(replaceText("20500101"));
        onView(withId(R.id.editEndDay))
                .perform(replaceText("20510101"));
        onView(withId(R.id.PersonNumber)).perform(click());
        onData(anything()).atPosition(0).perform(click());
        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        // 保存ボタンを押下
        onView(withId(R.id.menuListOption_Plan_Add))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // プラン一覧画面でプランをクリックする
        onView(withId(R.id.CardRecyclerView4Plan)).perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // イベント一覧画面の登録ボタンを押下する
        onView(withId(R.id.menuListOption_Event_List))
                .perform(click());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // ---------------------------------------------------------------
        // 適当にイベント登録
        // ---------------------------------------------------------------
        String eventDate = "20500102"; // 日付引継ぎ確認用

        onView(withId(R.id.editEventName))
                .perform(replaceText("テストイベント"));
        onView(withId(R.id.editEventDate))
                .perform(replaceText(eventDate));
        onView(withId(R.id.editStartTime))
                .perform(replaceText("1700"));
        onView(withId(R.id.editEndTime))
                .perform(replaceText("1900"));
        onView(withId(R.id.radio_sightseeing))
                .perform(click());
        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        onView(withId(R.id.editAddress))
                .perform(replaceText("東京都新宿区"));

        // 保存ボタンを押下する
        onView(withId(R.id.menuListOption_Event_Add))
                .perform(click());


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // イベント一覧画面でイベント長押ししたらイベント編集画面が開く
        onView(withId(R.id.CardRecyclerView4Event)).perform(RecyclerViewActions.actionOnItemAtPosition(0, longClick()));


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        String testEventName = "テスト編集イベント名４";
        String testEventDate = "20500103";
        String testEventStartTime = "0400";
        String testEventEndTime = "2300";
        String testEventMemo = "メモ４";
        String testEventAddress = "東京都新宿区４";
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText(testEventName));
        onView(withId(R.id.radio_move))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText(testEventDate));
        onView(withId(R.id.editStartTime))
                .perform(nestedScrollTo(), replaceText(testEventStartTime));
        onView(withId(R.id.editEndTime))
                .perform(nestedScrollTo(), replaceText(testEventEndTime));
        onView(withId(R.id.editMemo))
                .perform(nestedScrollTo(), replaceText(testEventMemo));
        Espresso.closeSoftKeyboard();
        onView(withId(R.id.editAddress))
                .perform(nestedScrollTo(), replaceText(testEventAddress));

        onView(withContentDescription(R.string.abc_action_bar_up_description)).perform(click());


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // 登録したイベントが変更されていないことを確認
        onView(withText("テストイベント")).check(matches(ViewMatchers.isDisplayed()));
    }

    @Test
    public void case3() {
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // ＋ボタンを押下
        onView(withId(R.id.menuListOption_Plan_List))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }
        // 登録するプラン情報を入力
        onView(withId(R.id.editPlanName))
                .perform(replaceText("テストプラン"));
        onView(withId(R.id.editStartDay))
                .perform(replaceText("20500101"));
        onView(withId(R.id.editEndDay))
                .perform(replaceText("20510101"));
        onView(withId(R.id.PersonNumber)).perform(click());
        onData(anything()).atPosition(9).perform(click());
        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        // 保存ボタンを押下
        onView(withId(R.id.menuListOption_Plan_Add))
                .perform(click());
        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // プラン一覧画面でプランをクリックする
        onView(withId(R.id.CardRecyclerView4Plan)).perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // イベント一覧画面の登録ボタンを押下する
        onView(withId(R.id.menuListOption_Event_List))
                .perform(click());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // ---------------------------------------------------------------
        // 適当にイベント登録
        // ---------------------------------------------------------------
        String eventDate = "20500102"; // 日付引継ぎ確認用

        onView(withId(R.id.editEventName))
                .perform(replaceText("テストイベント"));
        onView(withId(R.id.editEventDate))
                .perform(replaceText(eventDate));
        onView(withId(R.id.editStartTime))
                .perform(replaceText("1700"));
        onView(withId(R.id.editEndTime))
                .perform(replaceText("1900"));
        onView(withId(R.id.radio_sightseeing))
                .perform(click());
        onView(withId(R.id.editMemo))
                .perform(replaceText("テストメモ"));
        onView(withId(R.id.editAddress))
                .perform(replaceText("東京都新宿区"));

        // 保存ボタンを押下する
        onView(withId(R.id.menuListOption_Event_Add))
                .perform(click());


        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }


        // イベント参照画面を開く
        onView(withId(R.id.CardRecyclerView4Event)).perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // 編集画面に遷移
        onView(withId(R.id.menuListOption_Event_Reference)).perform(click());

        try {
            Thread.sleep(3000);
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        // -----------------------------------------------------------------------------------
        // 表示されている項目は全て登録した内容が表示されていること
        // -----------------------------------------------------------------------------------

        String testEventName = "テスト編集イベント名４";
        String testEventDate = "20500103";
        String testEventStartTime = "0400";
        String testEventEndTime = "2300";
        String testEventMemo = "メモ４";
        String testEventAddress = "東京都新宿区４";
        onView(withId(R.id.editEventName))
                .perform(nestedScrollTo(), replaceText(testEventName));
        onView(withId(R.id.radio_move))
                .perform(nestedScrollTo(), click());
        onView(withId(R.id.editEventDate))
                .perform(nestedScrollTo(), replaceText(testEventDate));
        onView(withId(R.id.editStartTime))
